# Aether-core

./: .gitignore  README.md  ai-purpose-scope.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: publish-java-sdk.yml  website-smoke.yml
aether-java-sdk/: build.gradle.kts
aether-java-sdk/src/main/java/io/github/aethercore/sdk/: AetherClient.java  AetherHostingPlanner.java  AetherRuntimeUnavailableException.java  AetherSidecarManager.java  BackendMode.java  HostingConfig.java  HostingRole.java  (+4 more)
aether_sidecar/: pyproject.toml  run.py
aether_sidecar/aether_sidecar/: app.py  backends.py  config.py  memory.py  models.py  observability.py  router.py  safety.py
aether_sidecar/tests/: test_app.py  test_backends.py  test_memory.py  test_router.py  test_safety.py  test_submodels.py
deploy/production/: docker-compose.yml
deploy/production/grafana/dashboards/: aether-overview.json
deploy/production/grafana/provisioning/dashboards/: dashboards.yml
deploy/production/loki/: local-config.yaml
deploy/production/prometheus/: prometheus.yml
docs/: ai-local-llm-implementation-plan.md  ai-production-orchestration.md  ai-system-implementation.md  ai-training-pipeline.md  github-packages-java-sdk.md
scripts/: run_sidecar_dev.ps1  run_sidecar_dev.sh  teach_lesson.ps1  teach_lesson.sh
training_pipeline/: __init__.py
training_pipeline/config/: train_config.example.yaml
training_pipeline/data/: aether_train.sample.jsonl  schema.md
training_pipeline/scripts/: fine_tune_lora.py  validate_dataset.py
training_pipeline/src/: data_utils.py
(+4 files in other folders)
